# TableCrow

./: .buildinfo  .editorconfig  .readthedocs.yml  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tablecrow.html  tablecrow.tables.html  tox.ini
.github/workflows/: build.yml  documentation.yml  quick_test.yml  test_quick.yml  tests.yml
_sources/: modules.rst.txt  tablecrow.rst.txt  tablecrow.tables.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  index.rst  tablecrow.connect.rst  tablecrow.rst  tablecrow.tables.rst  tablecrow.utilities.rst  utilities.rst
doctrees/: environment.pickle  index.doctree  modules.doctree  tablecrow.doctree  tablecrow.tables.doctree
html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  tablecrow.html  tablecrow.tables.html
html/_static/: documentation_options.js
tablecrow/: __init__.py  connect.py  postgres.py  table.py  utilities.py
tablecrow/tables/: __init__.py  base.py  postgres.py  sqlite.py
tests/: conftest.py  test_connections.py  test_postgres.py  test_sqlite.py  test_utilities.py
