[metadata]
name = tablecrow
author = Zach Burnett
author_email = zrb@umd.edu
description = abstract interface with remote database table
long_description = file: README.md
license = MIT
url = https://tablecrow.readthedocs.io

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
