[metadata]
name = tablecrow
author = Zach Burnett <zrb@umd.edu>
description = abstract interface with remote database table
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.8
url = https://tablecrow.readthedocs.io

[options]
install_requires =
    psycopg2-binary
    pyproj
    python-dateutil
    shapely
    spatialite
    sshtunnel
    typepigeon>=1.0.2

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    m2r2
    sphinx
    sphinx-rtd-theme
